fix hard bug with float price of VTBR stock

--- a/core/abnormal_volumes_ru_stocks.ipynb
+++ b/core/abnormal_volumes_ru_stocks.ipynb
@@ -16,25 +16,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Объем                 97,580,000 ₽\n",
+      "Лоты                   461,947 шт.\n",
+      "Цена                      0.021125\n",
+      "Время    2023-04-27 07:16:00+00:00\n",
+      "Name: 52227, dtype: object\n"
+     ]
+    }
+   ],
    "source": [
     "from tinkoff.invest import Client\n",
     "\n",
     "TOKEN = 't.b7eKSJEp3fpSiiv4mVt4fWwKIxaMHM1lDMtpGsPTeyl850b9Y4MluXYv-EQrj1vEu7QfkNwqGqGPfTW9N6EvTg'\n",
     "\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
     "from datetime import timedelta\n",
-    "from pathlib import Path\n",
     "from datetime import datetime, timedelta, timezone\n",
     "from decimal import Decimal\n",
     "from tinkoff.invest import CandleInterval, Client, HistoricCandle, Quotation, SubscriptionInterval\n",
-    "from tinkoff.invest.caching.market_data_cache.cache_settings import (\n",
-    "    MarketDataCacheSettings,\n",
-    ")\n",
-    "from tinkoff.invest.services import MarketDataCache\n",
     "from tinkoff.invest.utils import now\n",
     "\n",
     "__all__ = (\n",
@@ -62,37 +68,99 @@
     "    return Decimal(quotation.units) + fractional\n",
     "\n",
     "def get_final_stock_volumes(_input: int):\n",
-    "    return f'Объем: {_input:,} ₽'\n",
+    "    return f'{_input:,} ₽'\n",
     "\n",
     "def get_final_lots(_lots: int):\n",
-    "    return f'Кол-во лотов: {_lots:,} шт.'\n",
+    "    return f'{_lots:,} шт.'\n",
     "\n",
-    "volumes = []\n",
-    "prices = []\n",
-    "time = []\n",
+    "def calculate_net_change(current_closing_price: int, prev_closing_price: int):\n",
+    "    return f'Изменение цены: {round(((current_closing_price - prev_closing_price) / prev_closing_price * 100), 2)}%'\n",
+    "\n",
+    "def calculate_net_change_per_day(current_closing_price: int, yesterday_closing_price: int):\n",
+    "    # current price minus 840 indexes in order to fetch price index yesterday for 1 minute candle\n",
+    "    return f'Изменение за день: {round(((current_closing_price - yesterday_closing_price) / yesterday_closing_price * 100), 2)}%'\n",
+    "\n",
+    "def make_million_volumes_on_float_stock_prices(price: int):\n",
+    "    price = str(price)\n",
+    "    price += '0000'\n",
+    "    return get_final_stock_volumes(int(price))\n",
+    "\n",
+    "#volumes = []\n",
+    "#prices = []\n",
+    "#time = []\n",
+    "\n",
     "\n",
     "def main():\n",
+    "    # vtbr BBG004730ZJ9\n",
+    "    # lkoh BBG004731032\n",
     "    with Client(TOKEN) as client:\n",
-    "        #settings = MarketDataCacheSettings(base_cache_dir=Path(\"market_data_cache\"))\n",
-    "        #market_data_cache = MarketDataCache(settings=settings, services=client)\n",
+    "        l1_volumes = []\n",
+    "        l2_lots = []\n",
+    "        l3_prices = []\n",
+    "        l4_time = []\n",
+    "        data = {\"Объем\": l1_volumes, \"Лоты\": l2_lots, \"Цена\": l3_prices, \"Время\": l4_time}\n",
+    "        threshold = 5.0\n",
     "        for candle in client.get_all_candles(\n",
-    "            figi=\"BBG004731032\",\n",
+    "            figi=\"BBG004730ZJ9\",\n",
     "            from_=now() - timedelta(days=90),\n",
     "            interval=CandleInterval.CANDLE_INTERVAL_1_MIN,\n",
     "        ):\n",
-    "            final_stock_volume_rub = int(candle.volume * quotation_to_decimal(candle.close))\n",
-    "            volumes.append(final_stock_volume_rub)\n",
-    "            prices.append(int(quotation_to_decimal(candle.close)))\n",
-    "            time.append(candle.time)\n",
-    "            print(f'Лукойл (LKOH), Время: {candle.time}, {get_final_lots(candle.volume)}, {get_final_stock_volumes(final_stock_volume_rub)}, Цена: {quotation_to_decimal(candle.close)} ₽')\n",
+    "            if quotation_to_decimal(candle.close) < 1:\n",
+    "                final_stock_volume_rub = int(candle.volume * float(quotation_to_decimal(candle.close)))\n",
+    "                l1_volumes.append(make_million_volumes_on_float_stock_prices(final_stock_volume_rub))\n",
+    "                l2_lots.append(get_final_lots(candle.volume))\n",
+    "                l3_prices.append(float(quotation_to_decimal(candle.close)))\n",
+    "                l4_time.append(candle.time)\n",
+    "\n",
+    "                #print(f'ВТБ (VTBR), Время: {candle.time}, {get_final_lots(candle.volume)}, {make_million_volumes_on_float_stock_prices(final_stock_volume_rub)}, Цена: {float(quotation_to_decimal(candle.close))} ₽')\n",
+    "\n",
+    "\n",
+    "            else:\n",
+    "                final_stock_volume_rub = int(candle.volume * quotation_to_decimal(candle.close))\n",
+    "                l1_volumes.append(final_stock_volume_rub)\n",
+    "                l2_lots.append(get_final_lots(candle.volume))\n",
+    "                l3_prices.append(int(quotation_to_decimal(candle.close)))\n",
+    "                l4_time.append(candle.time)\n",
+    "\n",
+    "                #print(f'Лукойл (LKOH), Время: {candle.time}, {get_final_lots(candle.volume)}, {get_final_stock_volumes(final_stock_volume_rub)}, Цена: {float(quotation_to_decimal(candle.close))} ₽')\n",
+    "\n",
+    "            \n",
+    "            #volumes.append(final_stock_volume_rub)\n",
+    "            #prices.append(int(quotation_to_decimal(candle.close)))\n",
+    "            #time.append(candle.time)\n",
+    "        \n",
+    "        df = pd.DataFrame(data)\n",
+    "\n",
+    "        '''Объем                 97,580,000 ₽\n",
+    "           Лоты                   461,947 шт.\n",
+    "           Цена                      0.021125\n",
+    "           Время    2023-04-27 07:16:00+00:00\n",
+    "           Name: 52227, dtype: object'''\n",
+    "        print(df.iloc[52227])\n",
+    "\n",
+    "        # Calculate the rolling average and standard deviation of the trading volume\n",
+    "        '''volume_mean = round(df[\"Объем\"].mean())\n",
+    "        volume_std = round(df[\"Объем\"].std())\n",
+    "\n",
+    "        # Calculate the rolling average and standard deviation of the trading prices\n",
+    "        prcies_mean = round(df[\"Цена\"].mean())\n",
+    "        prices_std = round(df[\"Цена\"].std())'''\n",
+    "\n",
+    "        '''for i in range(len(df)):\n",
+    "            abnormal_volume = (df[\"Объем\"].iloc[i] - volume_mean) / volume_std\n",
+    "            abnormal_price_changes = (df[\"Цена\"].iloc[i] - prcies_mean) / prices_std\n",
+    "            \n",
+    "            if abnormal_volume > threshold or abnormal_price_changes > threshold:\n",
+    "                print(f'Зафиксирован аномальный объем! ВТБ (VTBR) {get_final_stock_volumes(df[\"Объем\"].iloc[i])},  Цена: {df[\"Цена\"].iloc[i]} ₽, {calculate_net_change(df[\"Цена\"].iloc[i], df[\"Цена\"].iloc[i - 1])}, {df[\"Время\"].iloc[i]}, {calculate_net_change_per_day(df[\"Цена\"].iloc[i], df[\"Цена\"].iloc[i - 840])}')\n",
+    "\n",
+    "        #if ((df[\"Объем\"].iloc[-1] - volume_mean) / volume_std) > threshold or ((df[\"Цена\"].iloc[-1] - prcies_mean) / prices_std) > threshold:\n",
+    "         #   print(f'Зафиксирован аномальный объем! Лукойл (LKOH) {get_final_stock_volumes(df[\"Объем\"].iloc[-1])},  Цена: {df[\"Цена\"].iloc[-1]} ₽, {calculate_net_change(df[\"Цена\"].iloc[-1], df[\"Цена\"].iloc[-1 - 1])}, {df[\"Время\"].iloc[-1]}, {calculate_net_change_per_day(df[\"Цена\"].iloc[-1], df[\"Цена\"].iloc[-1 - 840])}')'''\n",
+    "\n",
     "        \n",
     "    return 0\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    main()\n",
-    "    print(len(volumes))\n",
-    "    print(len(prices))\n",
-    "    print(len(time))\n"
+    "    main()\n"
    ]
   },
   {
