deal with buy and sell volumes

--- a/core/abnormal_volumes_ru_stocks.ipynb
+++ b/core/abnormal_volumes_ru_stocks.ipynb
@@ -20,6 +20,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# We need to track volumes that over than 30M rubles"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ewgfweg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import logging\n",
     "import os\n",
     "from datetime import timedelta\n",
@@ -75,7 +92,11 @@
     "    l2_lots = []\n",
     "    l3_prices = []\n",
     "    l4_time = []\n",
-    "    data = {\"Объем\": l1_volumes, \"Лоты\": l2_lots, \"Цена\": l3_prices, \"Время\": l4_time}\n",
+    "    l5_open = []\n",
+    "    l6_close = []\n",
+    "    l7_high = []\n",
+    "    l8_low = []\n",
+    "    data = {\"Объем\": l1_volumes, \"Лоты\": l2_lots, \"Цена\": l3_prices, \"Время\": l4_time, \"Открытие\": l5_open, \"Закрытие\": l6_close, \"Хай\": l7_high, \"Лоу\": l8_low}\n",
     "    threshold = 8.0\n",
     "    for candle in client.get_all_candles(\n",
     "        figi=\"BBG004730N88\",\n",
@@ -102,17 +123,6 @@
     "                TP = BV + SV\n",
     "                print(f'Время: {candle.time}, Цена: {int(quotation_to_decimal(candle.close))} TP = {TP}, Покупка: {round((BV / TP) * 100)}%, Продажа: {round((SV / TP) * 100)}%')\n",
     "\n",
-    "\n",
-    "            \n",
-    "            if candle.volume > 0:\n",
-    "                volume = candle.volume\n",
-    "            else:\n",
-    "                volume = 1\n",
-    "            \n",
-    "            '''# RAW Pressure Volume Calculations\n",
-    "            BPV = (BV / TP) * volume\n",
-    "            SPV = (SV / TP) * volume\n",
-    "            TPV = BPV + SPV'''\n",
     "\n",
     "            final_stock_volume_rub = int(candle.volume * quotation_to_decimal(candle.close))\n",
     "            l1_volumes.append(final_stock_volume_rub)\n",
@@ -197,43 +207,59 @@
     "    price += '0000'\n",
     "    return int(price)\n",
     "\n",
-    "volumes = []\n",
+    "final_volumes = []\n",
+    "lots = []\n",
     "prices = []\n",
     "time = []\n",
-    "\n",
+    "close = []\n",
+    "high = []\n",
+    "low = []\n",
+    "volumes_for_calculating = []\n",
     "\n",
     "def main():\n",
     "    # vtbr BBG004730ZJ9\n",
     "    # lkoh BBG004731032\n",
     "    # yndx BBG006L8G4H1\n",
     "    with Client(TOKEN) as client:\n",
-    "        l1_volumes = []\n",
+    "        l1_final_volumes = []\n",
     "        l2_lots = []\n",
     "        l3_prices = []\n",
     "        l4_time = []\n",
-    "        data = {\"Объем\": l1_volumes, \"Лоты\": l2_lots, \"Цена\": l3_prices, \"Время\": l4_time}\n",
+    "        l5_close = []\n",
+    "        l6_high = []\n",
+    "        l7_low = []\n",
+    "        l8_volumes_for_calculating = []\n",
+    "        data = {\"Объем\": final_volumes, \"Лоты\": lots, \"Цена\": prices, \"Время\": time, \"Закрытие\": close, \"Хай\": high, \"Лоу\": low, \"Volumes\": volumes_for_calculating}\n",
     "        threshold = 8.0\n",
     "        for candle in client.get_all_candles(\n",
-    "            figi=\"BBG004731032\",\n",
+    "            figi=\"BBG006L8G4H1\",\n",
     "            from_=now() - timedelta(days=90),\n",
     "            interval=CandleInterval.CANDLE_INTERVAL_1_MIN,\n",
     "        ):\n",
     "            if quotation_to_decimal(candle.close) < 1:\n",
     "                final_stock_volume_rub = int(candle.volume * float(quotation_to_decimal(candle.close)))\n",
-    "                l1_volumes.append(make_million_volumes_on_float_stock_prices(final_stock_volume_rub))\n",
+    "                l1_final_volumes.append(make_million_volumes_on_float_stock_prices(final_stock_volume_rub))\n",
     "                l2_lots.append(get_final_lots(candle.volume)) # get_final_lots\n",
     "                l3_prices.append(float(quotation_to_decimal(candle.close)))\n",
     "                l4_time.append(candle.time)\n",
+    "                l5_close.append(float(quotation_to_decimal(candle.close)))\n",
+    "                l6_high.append(float(quotation_to_decimal(candle.high)))\n",
+    "                l7_low.append(float(quotation_to_decimal(candle.low)))\n",
+    "                l8_volumes_for_calculating.append(float(candle.volume))\n",
     "\n",
     "                #print(f'ВТБ (VTBR), Время: {candle.time}, {get_final_lots(candle.volume)}, {get_final_float_stock_volumes(make_million_volumes_on_float_stock_prices(final_stock_volume_rub))}, Цена: {float(quotation_to_decimal(candle.close))} ₽')\n",
     "\n",
     "\n",
     "            else:\n",
     "                final_stock_volume_rub = int(candle.volume * quotation_to_decimal(candle.close))\n",
-    "                l1_volumes.append(final_stock_volume_rub)\n",
-    "                l2_lots.append(get_final_lots(candle.volume)) # get_final_lots\n",
-    "                l3_prices.append(int(quotation_to_decimal(candle.close)))\n",
-    "                l4_time.append(candle.time)\n",
+    "                final_volumes.append(final_stock_volume_rub)\n",
+    "                lots.append(get_final_lots(candle.volume)) # get_final_lots\n",
+    "                prices.append(int(quotation_to_decimal(candle.close)))\n",
+    "                time.append(candle.time)\n",
+    "                close.append(float(quotation_to_decimal(candle.close)))\n",
+    "                high.append(float(quotation_to_decimal(candle.high)))\n",
+    "                low.append(float(quotation_to_decimal(candle.low)))\n",
+    "                volumes_for_calculating.append(float(candle.volume))\n",
     "                '''l1_volumes.append(final_stock_volume_rub)\n",
     "                l2_lots.append(get_final_lots(candle.volume))\n",
     "                l3_prices.append(int(quotation_to_decimal(candle.close)))\n",
@@ -241,17 +267,10 @@
     "\n",
     "                #print(f'Лукойл (LKOH), Время: {candle.time}, {get_final_lots(candle.volume)}, {get_final_stock_volumes(final_stock_volume_rub)}, Цена: {float(quotation_to_decimal(candle.close))} ₽')\n",
     "        \n",
-    "        df = pd.DataFrame(data)\n",
-    "\n",
-    "        '''Объем                 97,580,000 ₽\n",
-    "           Лоты                   461,947 шт.\n",
-    "           Цена                      0.021125\n",
-    "           Время    2023-04-27 07:16:00+00:00\n",
-    "           Name: 52227, dtype: object'''\n",
-    "        #print(type(df[\"Объем\"].iloc[52227]))\n",
+    "        #df = pd.DataFrame(data)\n",
     "\n",
     "        # Calculate the rolling average and standard deviation of the trading volume\n",
-    "        volume_mean = round(df[\"Объем\"].mean())\n",
+    "        '''volume_mean = round(df[\"Объем\"].mean())\n",
     "        volume_std = round(df[\"Объем\"].std())\n",
     "\n",
     "        # Calculate the rolling average and standard deviation of the trading prices\n",
@@ -265,9 +284,17 @@
     "\n",
     "            if abnormal_volume > threshold or abnormal_price_changes > threshold:\n",
     "                if type(df[\"Цена\"].iloc[i]) == float:\n",
-    "                    print(f'Зафиксирован аномальный объем! ТГКН-14 (TGKN) {get_stock_volumes(df[\"Объем\"].iloc[i])},  Цена: {df[\"Цена\"].iloc[i]} ₽, {calculate_net_change_float(df[\"Цена\"].iloc[i], df[\"Цена\"].iloc[i - 1])}, {df[\"Время\"].iloc[i]}, {calculate_net_change_per_day_float(df[\"Цена\"].iloc[i], df[\"Цена\"].iloc[i - 840])}, Время: {df[\"Время\"].iloc[i]}')\n",
+    "                    print(f'Зафиксирован аномальный объем! ВТБ (VTBR) {get_stock_volumes(df[\"Объем\"].iloc[i])},  Цена: {df[\"Цена\"].iloc[i]} ₽, {calculate_net_change_float(df[\"Цена\"].iloc[i], df[\"Цена\"].iloc[i - 1])}, {df[\"Время\"].iloc[i]}, {calculate_net_change_per_day_float(df[\"Цена\"].iloc[i], df[\"Цена\"].iloc[i - 840])}, Время: {df[\"Время\"].iloc[i]}')\n",
     "                else:\n",
-    "                    print(f'Зафиксирован аномальный объем! Лукойл (LKOH) {get_stock_volumes(df[\"Объем\"].iloc[i])},  Цена: {df[\"Цена\"].iloc[i]} ₽, {calculate_net_change(df[\"Цена\"].iloc[i], df[\"Цена\"].iloc[i - 1])}, {df[\"Время\"].iloc[i]}, {calculate_net_change_per_day(df[\"Цена\"].iloc[i], df[\"Цена\"].iloc[i - 840])}, Время: {df[\"Время\"].iloc[i]}')\n",
+    "                    if df[\"Хай\"].iloc[i] == df[\"Лоу\"].iloc[i]:\n",
+    "                        BV = 0\n",
+    "                        SV = 0\n",
+    "                    else:\n",
+    "                        BV = (df[\"Volumes\"].iloc[i] * (df[\"Закрытие\"].iloc[i] - df[\"Лоу\"].iloc[i])) / (df[\"Хай\"].iloc[i] - df[\"Закрытие\"].iloc[i])\n",
+    "                        SV = (df[\"Volumes\"].iloc[i] * (df[\"Хай\"].iloc[i] - df[\"Закрытие\"].iloc[i])) / (df[\"Хай\"].iloc[i] - df[\"Лоу\"].iloc[i])\n",
+    "                        TP = BV + SV\n",
+    "                        print(f'#YNDX Yandex\\n🟩 Аномальный объем\\n{calculate_net_change(df[\"Цена\"].iloc[i], df[\"Цена\"].iloc[i - 1])}\\n{get_stock_volumes(df[\"Объем\"].iloc[i])} {df[\"Лоты\"].iloc[i]}\\nПокупка: {round((BV / TP) * 100)}% Продажа: {round((SV / TP) * 100)}%\\nВремя: {df[\"Время\"].iloc[i]}\\nЦена: {df[\"Цена\"].iloc[i]} ₽\\n{calculate_net_change_per_day(df[\"Цена\"].iloc[i], df[\"Цена\"].iloc[i - 840])}\\nЗаметил Moex Oracle.')\n",
+    "                    #print(f'Зафиксирован аномальный объем! Лукойл (LKOH) {get_stock_volumes(df[\"Объем\"].iloc[i])},  Цена: {df[\"Цена\"].iloc[i]} ₽, {calculate_net_change(df[\"Цена\"].iloc[i], df[\"Цена\"].iloc[i - 1])}, {df[\"Время\"].iloc[i]}, {calculate_net_change_per_day(df[\"Цена\"].iloc[i], df[\"Цена\"].iloc[i - 840])}, Время: {df[\"Время\"].iloc[i]}')'''\n",
     "        \n",
     "    return 0\n",
     "\n",
@@ -281,8 +308,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataframe = {'Объем': volumes, 'Цена': prices, 'Время': time}\n",
-    "df = pd.DataFrame(dataframe)\n",
+    "data = {\"Объем\": final_volumes, \"Лоты\": lots, \"Цена\": prices, \"Время\": time, \"Закрытие\": close, \"Хай\": high, \"Лоу\": low, \"Volumes\": volumes_for_calculating}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
     "threshold = 8.0\n",
     "\n",
     "# Calculate the rolling average and standard deviation of the trading volume\n",
@@ -318,7 +346,15 @@
     "        if type(df[\"Цена\"].iloc[i]) == float:\n",
     "            print(f'Зафиксирован аномальный объем! ТГКН-14 (TGKN) {get_stock_volumes(df[\"Объем\"].iloc[i])},  Цена: {df[\"Цена\"].iloc[i]} ₽, {calculate_net_change_float(df[\"Цена\"].iloc[i], df[\"Цена\"].iloc[i - 1])}, {df[\"Время\"].iloc[i]}, {calculate_net_change_per_day_float(df[\"Цена\"].iloc[i], df[\"Цена\"].iloc[i - 840])}, Время: {df[\"Время\"].iloc[i]}')\n",
     "        else:\n",
-    "            print(f'Зафиксирован аномальный объем! Лукойл (LKOH) {get_stock_volumes(df[\"Объем\"].iloc[i])},  Цена: {df[\"Цена\"].iloc[i]} ₽, {calculate_net_change(df[\"Цена\"].iloc[i], df[\"Цена\"].iloc[i - 1])}, {df[\"Время\"].iloc[i]}, {calculate_net_change_per_day(df[\"Цена\"].iloc[i], df[\"Цена\"].iloc[i - 840])}, Время: {df[\"Время\"].iloc[i]}')"
+    "             if df[\"Хай\"].iloc[i] == df[\"Лоу\"].iloc[i]:\n",
+    "                BV = 0\n",
+    "                SV = 0\n",
+    "             else:\n",
+    "                BV = (df[\"Volumes\"].iloc[i] * (df[\"Закрытие\"].iloc[i] - df[\"Лоу\"].iloc[i])) / (df[\"Хай\"].iloc[i] - df[\"Закрытие\"].iloc[i])\n",
+    "                SV = (df[\"Volumes\"].iloc[i] * (df[\"Хай\"].iloc[i] - df[\"Закрытие\"].iloc[i])) / (df[\"Хай\"].iloc[i] - df[\"Лоу\"].iloc[i])\n",
+    "                TP = BV + SV\n",
+    "                #print(f'#YNDX Yandex\\n🟩 Аномальный объем\\n{calculate_net_change(df[\"Цена\"].iloc[i], df[\"Цена\"].iloc[i - 1])}\\n{get_stock_volumes(df[\"Объем\"].iloc[i])} {df[\"Лоты\"].iloc[i]}\\nПокупка: {round((BV / TP) * 100)}% Продажа: {round((SV / TP) * 100)}%\\nВремя: {df[\"Время\"].iloc[i]}\\nЦена: {df[\"Цена\"].iloc[i]} ₽\\n{calculate_net_change_per_day(df[\"Цена\"].iloc[i], df[\"Цена\"].iloc[i - 840])}\\nЗаметил Moex Oracle.')\n",
+    "                print(f'Зафиксирован аномальный объем! Yandex (YNDX) {get_stock_volumes(df[\"Объем\"].iloc[i])},  Цена: {df[\"Цена\"].iloc[i]} ₽, {calculate_net_change(df[\"Цена\"].iloc[i], df[\"Цена\"].iloc[i - 1])}, {df[\"Время\"].iloc[i]}, {calculate_net_change_per_day(df[\"Цена\"].iloc[i], df[\"Цена\"].iloc[i - 840])}, Время: {df[\"Время\"].iloc[i]}')"
    ]
   },
   {
@@ -480,7 +516,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(f'#YNDX Yandex\\n🟩 Аномальный объем\\nИзменение цены: {0.02}%\\nОбъем: {47.8}М ₽ ({21779} лотов)\\nПокупка: {62}% Продажа: {38}%\\nВремя: 2023-05-19 13:45\\nЦена: {2195} ₽\\nИзменение за день: {7.98}%')"
+   ]
   }
  ],
  "metadata": {
