debug and prepare for integration to Telegram

--- a/core/abnormal_volumes_ru_stocks.ipynb
+++ b/core/abnormal_volumes_ru_stocks.ipynb
@@ -16,9 +16,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "58453\n",
+      "58453\n",
+      "58453\n",
+      "58453\n",
+      "58453\n",
+      "58453\n",
+      "58453\n",
+      "58453\n",
+      "58453\n"
+     ]
+    }
+   ],
    "source": [
     "from tinkoff.invest import Client\n",
     "\n",
@@ -113,6 +129,12 @@
     "    price += '000'\n",
     "    return int(price)\n",
     "\n",
+    "tickers = [\"GAZP\", \"VTBR\", \"LKOH\", \"YNDX\", \"MGNT\", \"POLY\", \"SBERP\", \"TCSG\", \"CHMF\", \"ALRS\", \"MMK\", \"PHOR\", \"SNGS\", \"SNGSP\", \"NLMK\", \"TATN\", \"MTLR\", \"MTSS\", \"MOEX\", \"RUAL\", \"AFLT\", \"CBOM\", \"OZON\", \"AFKS\", \"SMLT\", \"SPBE\", \"PIKK\", \"IRAO\", \"SIBN\", \"RASP\", \"SGZH\", \"DSKY\", \"TRNFP\", \"RNFT\", \"FIVE\", \"BSPB\", \"FLOT\", \"UWGN\", \"MTLRP\", \"ISKJ\", \"POSI\", \"UPRO\", \"BELU\"]\n",
+    "names = [\"Газпром\", \"ВТБ\", \"Лукойл\", \"ЯНДЕКС\", \"Магнит\", \"Polymetal International\", \"Сбербанк России, акции привилегированные\", \"TCS Group\", \"Северсталь\", \"АЛРОСА\", \"MAGN\", \"ФосАгро\", \"Сургутнефтегаз\", \"Сургутнефтегаз, акции привилегированные\", \"НЛМК\", \"Татнефть\", \"Мечел\", \"МТС\", \"Московская Биржа\", \"ОК РУСАЛ\", \"Аэрофлот\", \"Московский кредитный банк\", \"Озон Холдингс\", \"АФК Система\", \"Группа компаний Самолет\", \"СПБ Биржа\", \"ПИК-Специализированный застройщик\", \"ИНТЕР РАО\", \"Газпром нефть\", \"Распадская\", \"Сегежа Групп\", \"Детский мир\", \"Транснефть, акции привилегированные\", \"РуссНефть\", \"X5 Retail Group\", \"Банк Санкт-Петербург\", \"Совкомфлот\", \"НПК ОВК\", \"Мечел, акции привилегированные\", \"Институт Стволовых Клеток Человека\", \"Группа Позитив\", \"Юнипро\", \"Белуга Групп\"]\n",
+    "figi = [\"BBG004730RP0\", \"BBG004730ZJ9\", \"BBG004731032\", \"BBG004RVFCY3\", \"BBG004PYF2N3\", \"BBG0047315Y7\", \"BBG00QPYJ5G1\", \"BBG00475K6C3\", \"BBG004S68507\", \"BBG004S689R0\", \"BBG0047315D0\", \"BBG004S681M2\", \"BBG004S681B4\", \"BBG004RVFFC0\", \"BBG004S68598\", \"BBG004S681W1\", \"BBG004730JJ5\", \"BBG008F2T3T2\", \"BBG004S683W7\", \"BBG009GSYN76\", \"BBG00Y91R9T3\", \"BBG004S68614\", \"BBG00F6NKQX3\", \"BBG002GHV6L9\", \"BBG004S68BH6\", \"BBG004S68473\", \"BBG004S684M6\", \"BBG004S68696\", \"BBG0100R9963\", \"BBG000BN56Q9\", \"BBG00475KHX6\", \"BBG00F9XX7H4\", \"BBG00JXPFBN0\", \"BBG000QJW156\", \"BBG000R04X57\", \"BBG008HD3V85\", \"BBG004S68FR6\", \"BBG000N16BP3\", \"BBG0145HYFY9\", \"BBG004S686W0\", \"BBG000TY1C41\"]\n",
+    "\n",
+    "stock_info = {\"ticker\": tickers, \"names\": names, \"figi\": figi}\n",
+    "\n",
     "l1_volumes = []\n",
     "l2_lots = []\n",
     "l3_prices = []\n",
@@ -166,11 +188,14 @@
     "    # iskj BBG000N16BP3\n",
     "    # posi BBG0145HYFY9\n",
     "    # UPRO BBG004S686W0\n",
+    "    # belu BBG000TY1C41\n",
     "    with Client(TOKEN) as client:\n",
     "        data = {\"Объем\": l1_volumes, \"Лоты\": l2_lots, \"Цена\": l3_prices, \"Время\": l4_time, \"Закрытие\": l5_close, \"Хай\": l6_high, \"Лоу\": l7_low, \"Покупка\": l8_bvp, \"Продажа\": l9_svp}\n",
-    "        threshold = 8.0\n",
+    "        THRESHOLD = 5.0\n",
+    "\n",
+    "        # try to track abnormal volumes on Gazprom\n",
     "        for candle in client.get_all_candles(\n",
-    "            figi=\"BBG004S686W0\",\n",
+    "            figi=f'{stock_info[\"figi\"][1]}',\n",
     "            from_=now() - timedelta(days=90),\n",
     "            interval=CandleInterval.CANDLE_INTERVAL_1_MIN,\n",
     "        ):\n",
@@ -220,7 +245,26 @@
     "                    l8_bvp.append(BVP)\n",
     "                    l9_svp.append(SVP)\n",
     "        \n",
-    "        #df = pd.DataFrame(data)\n",
+    "        '''df = pd.DataFrame(data)\n",
+    "\n",
+    "        # Calculate the rolling average and standard deviation of the trading volume\n",
+    "        def calculate_volume_mean():\n",
+    "            volume_mean = df['Объем'].mean()\n",
+    "            return volume_mean\n",
+    "        \n",
+    "        def calculate_volume_std():\n",
+    "            volume_std = df['Объем'].std()\n",
+    "            return volume_std\n",
+    "        \n",
+    "        # Calculate the rolling average and standard deviation of the trading prices\n",
+    "        def calculate_prices_mean():\n",
+    "            prcies_mean = df['Цена'].mean()\n",
+    "            return prcies_mean\n",
+    "\n",
+    "        def calculate_prices_std():\n",
+    "            prices_std = df['Цена'].std()\n",
+    "            return prices_std'''\n",
+    "        \n",
     "\n",
     "        print(len(l1_volumes))\n",
     "        print(len(l2_lots))\n",
@@ -232,48 +276,25 @@
     "        print(len(l8_bvp))\n",
     "        print(len(l9_svp))\n",
     "\n",
-    "        '''63324 VTBR\n",
-    "           63324\n",
-    "           63324\n",
-    "           63324\n",
-    "           63324\n",
-    "           63324\n",
-    "           63324\n",
-    "           63324\n",
-    "           63324'''\n",
+    "        # len of gazp df is 61721\n",
+    "        # len of vtbr df is\n",
     "        \n",
-    "        '''53073'''\n",
-    "\n",
-    "        # Calculate the rolling average and standard deviation of the trading volume\n",
-    "        '''volume_mean = round(df[\"Объем\"].mean())\n",
-    "        volume_std = round(df[\"Объем\"].std())\n",
-    "\n",
-    "        # Calculate the rolling average and standard deviation of the trading prices\n",
-    "        prcies_mean = round(df[\"Цена\"].mean())\n",
-    "        prices_std = round(df[\"Цена\"].std())\n",
-    "\n",
-    "        for i in range(len(df)):\n",
-    "            abnormal_volume = (df['Объем'].iloc[i] - volume_mean) / volume_std\n",
-    "            abnormal_price_changes = (df['Цена'].iloc[i] - prcies_mean) / prices_std\n",
-    "            #print(abnormal_volume, abnormal_price_changes)\n",
-    "\n",
-    "            if abnormal_volume > threshold or abnormal_price_changes > threshold:\n",
-    "                if type(df[\"Цена\"].iloc[i]) == float:\n",
-    "                    print(f'Зафиксирован аномальный объем! ВТБ (VTBR) {get_stock_volumes(df[\"Объем\"].iloc[i])},  Цена: {df[\"Цена\"].iloc[i]} ₽, {calculate_net_change_float(df[\"Цена\"].iloc[i], df[\"Цена\"].iloc[i - 1])}, {df[\"Время\"].iloc[i]}, {calculate_net_change_per_day_float(df[\"Цена\"].iloc[i], df[\"Цена\"].iloc[i - 840])}, Время: {df[\"Время\"].iloc[i]}')\n",
+    "        \n",
+    "        '''for i in range(len(df)):\n",
+    "            abnormal_volume = (df['Объем'].iloc[i] - calculate_volume_mean()) / calculate_volume_std()\n",
+    "            abnormal_price_changes = (df['Цена'].iloc[i] - calculate_prices_mean()) / calculate_prices_std()\n",
+    "            \n",
+    "            if abnormal_volume >= THRESHOLD or abnormal_price_changes > THRESHOLD:\n",
+    "                if df[\"Покупка\"].iloc[i] > df[\"Продажа\"].iloc[i]:\n",
+    "                    print(f'#{stock_info[\"ticker\"][0]} {stock_info[\"names\"][0]}\\n🟩 Аномальный объем\\n{calculate_net_change(df[\"Цена\"].iloc[i], df[\"Цена\"].iloc[i - 1])}\\n{get_stock_volumes(make_million_volumes_on_int_stock_prices(df[\"Объем\"].iloc[i]))} ({df[\"Лоты\"].iloc[i]})\\nПокупка: {df[\"Покупка\"].iloc[i]}% Продажа: {df[\"Продажа\"].iloc[i]}%\\nВремя: {df[\"Время\"].iloc[i]}\\nЦена: {df[\"Цена\"].iloc[i]} ₽\\n{calculate_net_change_per_day(df[\"Цена\"].iloc[i], df[\"Цена\"].iloc[i - 840])}\\nЗаметил Moex Oracle.')\n",
+    "                    print('=========================================')\n",
     "                else:\n",
-    "                    if df[\"Хай\"].iloc[i] == df[\"Лоу\"].iloc[i]:\n",
-    "                        BV = 0\n",
-    "                        SV = 0\n",
-    "                    else:\n",
-    "                        BV = (df[\"Volumes\"].iloc[i] * (df[\"Закрытие\"].iloc[i] - df[\"Лоу\"].iloc[i])) / (df[\"Хай\"].iloc[i] - df[\"Закрытие\"].iloc[i])\n",
-    "                        SV = (df[\"Volumes\"].iloc[i] * (df[\"Хай\"].iloc[i] - df[\"Закрытие\"].iloc[i])) / (df[\"Хай\"].iloc[i] - df[\"Лоу\"].iloc[i])\n",
-    "                        TP = BV + SV\n",
-    "                        print(f'#YNDX Yandex\\n🟩 Аномальный объем\\n{calculate_net_change(df[\"Цена\"].iloc[i], df[\"Цена\"].iloc[i - 1])}\\n{get_stock_volumes(df[\"Объем\"].iloc[i])} {df[\"Лоты\"].iloc[i]}\\nПокупка: {round((BV / TP) * 100)}% Продажа: {round((SV / TP) * 100)}%\\nВремя: {df[\"Время\"].iloc[i]}\\nЦена: {df[\"Цена\"].iloc[i]} ₽\\n{calculate_net_change_per_day(df[\"Цена\"].iloc[i], df[\"Цена\"].iloc[i - 840])}\\nЗаметил Moex Oracle.')\n",
-    "                    #print(f'Зафиксирован аномальный объем! Лукойл (LKOH) {get_stock_volumes(df[\"Объем\"].iloc[i])},  Цена: {df[\"Цена\"].iloc[i]} ₽, {calculate_net_change(df[\"Цена\"].iloc[i], df[\"Цена\"].iloc[i - 1])}, {df[\"Время\"].iloc[i]}, {calculate_net_change_per_day(df[\"Цена\"].iloc[i], df[\"Цена\"].iloc[i - 840])}, Время: {df[\"Время\"].iloc[i]}')'''\n",
-    "        \n",
+    "                    print(f'#{stock_info[\"ticker\"][0]} {stock_info[\"names\"][0]}\\n🔻 Аномальный объем\\n{calculate_net_change(df[\"Цена\"].iloc[i], df[\"Цена\"].iloc[i - 1])}\\n{get_stock_volumes(make_million_volumes_on_int_stock_prices(df[\"Объем\"].iloc[i]))} ({df[\"Лоты\"].iloc[i]})\\nПокупка: {df[\"Покупка\"].iloc[i]}% Продажа: {df[\"Продажа\"].iloc[i]}%\\nВремя: {df[\"Время\"].iloc[i]}\\nЦена: {df[\"Цена\"].iloc[i]} ₽\\n{calculate_net_change_per_day(df[\"Цена\"].iloc[i], df[\"Цена\"].iloc[i - 840])}\\nЗаметил Moex Oracle.')\n",
+    "                    print('=========================================')'''\n",
     "    return 0\n",
     "\n",
     "if __name__ == \"__main__\":\n",
+    "    #while True:\n",
     "    main()\n"
    ]
   },
@@ -328,10 +349,10 @@
     "\n",
     "    if abnormal_volume >= THRESHOLD or abnormal_price_changes > THRESHOLD:\n",
     "        if df[\"Покупка\"].iloc[i] > df[\"Продажа\"].iloc[i]:\n",
-    "            print(f'#UPRO Юнипро\\n🟩 Аномальный объем\\n{calculate_net_change(df[\"Цена\"].iloc[i], df[\"Цена\"].iloc[i - 1])}\\n{get_stock_volumes(make_million_volumes_on_upro(df[\"Объем\"].iloc[i]))} ({df[\"Лоты\"].iloc[i]})\\nПокупка: {df[\"Покупка\"].iloc[i]}% Продажа: {df[\"Продажа\"].iloc[i]}%\\nВремя: {df[\"Время\"].iloc[i]}\\nЦена: {df[\"Цена\"].iloc[i]} ₽\\n{calculate_net_change_per_day(df[\"Цена\"].iloc[i], df[\"Цена\"].iloc[i - 840])}\\nЗаметил Moex Oracle.')\n",
+    "            print(f'#GAZP Газпром\\n🟩 Аномальный объем\\n{calculate_net_change(df[\"Цена\"].iloc[i], df[\"Цена\"].iloc[i - 1])}\\n{get_stock_volumes(make_million_volumes_on_int_stock_prices(df[\"Объем\"].iloc[i]))} ({df[\"Лоты\"].iloc[i]})\\nПокупка: {df[\"Покупка\"].iloc[i]}% Продажа: {df[\"Продажа\"].iloc[i]}%\\nВремя: {df[\"Время\"].iloc[i]}\\nЦена: {df[\"Цена\"].iloc[i]} ₽\\n{calculate_net_change_per_day(df[\"Цена\"].iloc[i], df[\"Цена\"].iloc[i - 840])}\\nЗаметил Moex Oracle.')\n",
     "            print('=========================================')\n",
     "        else:\n",
-    "            print(f'#UPRO Юнипро\\n🔻 Аномальный объем\\n{calculate_net_change(df[\"Цена\"].iloc[i], df[\"Цена\"].iloc[i - 1])}\\n{get_stock_volumes(make_million_volumes_on_upro(df[\"Объем\"].iloc[i]))} ({df[\"Лоты\"].iloc[i]})\\nПокупка: {df[\"Покупка\"].iloc[i]}% Продажа: {df[\"Продажа\"].iloc[i]}%\\nВремя: {df[\"Время\"].iloc[i]}\\nЦена: {df[\"Цена\"].iloc[i]} ₽\\n{calculate_net_change_per_day(df[\"Цена\"].iloc[i], df[\"Цена\"].iloc[i - 840])}\\nЗаметил Moex Oracle.')\n",
+    "            print(f'#GAZP Газпром\\n🔻 Аномальный объем\\n{calculate_net_change(df[\"Цена\"].iloc[i], df[\"Цена\"].iloc[i - 1])}\\n{get_stock_volumes(make_million_volumes_on_int_stock_prices(df[\"Объем\"].iloc[i]))} ({df[\"Лоты\"].iloc[i]})\\nПокупка: {df[\"Покупка\"].iloc[i]}% Продажа: {df[\"Продажа\"].iloc[i]}%\\nВремя: {df[\"Время\"].iloc[i]}\\nЦена: {df[\"Цена\"].iloc[i]} ₽\\n{calculate_net_change_per_day(df[\"Цена\"].iloc[i], df[\"Цена\"].iloc[i - 840])}\\nЗаметил Moex Oracle.')\n",
     "            print('=========================================')"
    ]
   },
@@ -522,8 +543,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 15,164,054\n",
-    "# 151,640,540"
+    "c = 0\n",
+    "while c <= 5:\n",
+    "    for i in range(5):\n",
+    "        l1 = []\n",
+    "        l2 = []\n",
+    "        l3 = []\n",
+    "        if i % 2 == 0:\n",
+    "            l1.append(i)\n",
+    "            l2.append(i)\n",
+    "            l3.append(i)\n",
+    "        print(len(l1))\n",
+    "        print(len(l2))\n",
+    "        print(len(l3))\n",
+    "\n",
+    "    c += 1\n",
+    "\n",
+    "print(len(l1))"
    ]
   },
   {
@@ -532,33 +568,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "from datetime import timedelta\n",
-    "from decimal import Decimal\n",
-    "from tinkoff.invest import CandleInterval, Client, Quotation\n",
-    "from tinkoff.invest.utils import now\n",
-    "\n",
-    "TOKEN = 't.b7eKSJEp3fpSiiv4mVt4fWwKIxaMHM1lDMtpGsPTeyl850b9Y4MluXYv-EQrj1vEu7QfkNwqGqGPfTW9N6EvTg'\n",
-    "\n",
-    "# Quotation type = MoneyValue. We need to convert this to decimal in order to fetch price per share\n",
-    "def quotation_to_decimal(quotation: Quotation) -> Decimal:\n",
-    "    fractional = quotation.nano / Decimal(\"10e8\")\n",
-    "    return Decimal(quotation.units) + fractional\n",
-    "\n",
-    "def main():\n",
-    "    with Client(TOKEN) as client:\n",
-    "        for candle in client.get_all_candles(\n",
-    "            figi=\"BBG000R607Y3\",\n",
-    "            from_=now() - timedelta(days=90),\n",
-    "            interval=CandleInterval.CANDLE_INTERVAL_1_MIN,\n",
-    "        ):\n",
-    "            print(f'Volume: {int(candle.volume * quotation_to_decimal(candle.close))}, {candle.time}, Price: {quotation_to_decimal(candle.close)}')\n",
-    "\n",
-    "    return 0\n",
-    "\n",
-    "\n",
-    "if __name__ == \"__main__\":\n",
-    "    main()\n"
+    "# 15,164,054\n",
+    "# 151,640,540"
    ]
   },
   {
@@ -633,6 +644,22 @@
     "print(f'#ISKJ') # # add make_million_on_int\n",
     "print(f'#UPRO') # # add make_million_on_upro"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f'#{stock_info[\"ticker\"][0]} {stock_info[\"names\"][0]} figi: {stock_info[\"figi\"][0]}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
